[package]
name = "pneumatic_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.108"
rmp-serde = "1.1.2"
serde = { version = "1.0.193", features = ["derive"] }
dashmap = "5.5.3"
strum = "0.26.3"
strum_macros = "0.26.4"
moka = { version = "0.12.7", features = ["sync"] }
rocksdb = "0.22.0"
once_cell = "1.19.0"
chrono = "0.4.38"
file-lock = "2.1.11"
ring = "0.17.8"
tokio = { version = "1.38.1", features = ["full"] }
tokio-macros = "2.3.0"
tokio-stream = "0.1.15"